objects/OAH_Filing_Party_Info__c.object
<CustomObject>
    <description>Information for each party related to the case. OAH Case can have multiple received dates for the Parties (Petitioner, Respondent, Intervenor).</description>
    <label>OAH Filing Party Info</label>
    <nameField>
        <displayFormat>PFID-{YYYY}-{0000}</displayFormat>
        <label>FilingParty Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>OAH Filing Party Info</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Party__c</fullName>
        <description>Which party of the case the received date is related to.</description>
        <label>Party</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Petitioner-Attorney</fullName>
                </value>
                <value>
                    <fullName>Petitioner-Pro Se</fullName>
                </value>
                <value>
                    <fullName>Respondent-Attorney</fullName>
                </value>
                <value>
                    <fullName>Respondent-Pro Se</fullName>
                </value>
                <value>
                    <fullName>Intervenor-Attorney</fullName>
                </value>
                <value>
                    <fullName>Intervenor-Pro Se</fullName>
                </value>
                <value>
                    <fullName>Court</fullName>
                </value>
                <value>
                    <fullName>DCCA</fullName>
                </value>
                <value>
                    <fullName>OAH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>OAH Filing Party Info</relationshipLabel>
        <relationshipName>OAH_Filing_Party_Info</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Type__c</fullName>
        <description>Which type of party of the case the received date is related to.</description>
        <label>Party Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attorney</fullName>
                </value>
                <value>
                    <fullName>Pro Se</fullName>
                </value>
                <value>
                    <fullName>Intervenor</fullName>
                    <isActive>false</isActive>
                    <label>Intervenor</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Old_Record_ID__c</fullName>
        <label>Old Record ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Filing__c</fullName>
        <description>Date filed by Party</description>
        <label>Date of Filing</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OAH_Party_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Party Name</label>
        <referenceTo>OAH_Contact__c</referenceTo>
        <relationshipLabel>OAH Filing Party Info</relationshipLabel>
        <relationshipName>OAH_Parties_Info</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OAH_Case_Number__c</fullName>
        <label>OAH Case Number</label>
        <referenceTo>OAH_Case_List__c</referenceTo>
        <relationshipName>OAH_Parties_Info</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Filing_Date_Text__c</fullName>
        <description>This field concatenates the text &quot;Filing Date&quot; with the Date of Filing field to display as one field.  This is used by the OAH Filing Party Info related list on the OAH Docket Sheet  Docket Sheet Layout.</description>
        <formula>&quot;Filing Date &quot; &amp; TEXT( MONTH( Date_of_Filing__c ) ) &amp; &quot;/&quot; &amp; TEXT( DAY( Date_of_Filing__c ) ) &amp; &quot;/&quot; &amp; TEXT( YEAR( Date_of_Filing__c ) )</formula>
        <label>Filing Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Party_Text__c</fullName>
        <description>This field concatenates the Party Description field with the OAH Party Name field to display as one field.  This is used by the OAH Filing Party Info related list on the OAH Docket Sheet  Docket Sheet Layout.</description>
        <formula>Party_Description__c &amp; &quot; &quot; &amp;  OAH_Party_Name__r.Name</formula>
        <label>Filing Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Description__c</fullName>
        <formula>TEXT( Party__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_of_Document__c</fullName>
        <description>Title of the Document being filed</description>
        <label>Title of Document</label>
        <length>200</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filing_Party_Text2__c</fullName>
        <formula>Party_Description__c &amp; &quot; &quot; &amp; Party_Name__r.FirstName &amp; &quot; &quot; &amp; Party_Name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Filing Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Record_ID_text__c</fullName>
        <formula>Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Party Record ID text</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OAH_Case_Number__c</columns>
        <columns>Party__c</columns>
        <columns>Date_of_Filing__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>